hphp/test/zend/good/ext/intl/tests/formatter_get_set_symbol2.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( !extension_loaded( 'intl' ) ) print 'skip';
if(version_compare(INTL_ICU_VERSION, '4.8') < 0) print 'skip';
}
