hphp/test/zend/bad/ext/intl/tests/intl_icu_data_version_constant.php.skipif
<?php if( !extension_loaded( 'intl' ) || version_compare('INTL_ICU_VERSION', '4.4', '<') ) print 'skip'; ?>